# Hambot_Ros2

./: .gitignore  AGENTS.md
cj_hambot_ws/: Dockerfile.robot  Dockerfile.sim  docker-compose.robot.yml  docker-compose.sim.yml  workflow.md
cj_hambot_ws/src/hambot_behavior/: package.xml  setup.cfg  setup.py
cj_hambot_ws/src/hambot_bringup/: CMakeLists.txt  package.xml
cj_hambot_ws/src/hambot_bringup/launch/: sim_bringup.launch.py
cj_hambot_ws/src/hambot_bringup/worlds/: campus_map.sdf  campus_sidewalk.sdf  map_generator.py
cj_hambot_ws/src/hambot_description/: CMakeLists.txt
cj_hambot_ws/src/hambot_description/urdf/: base.urdf.xacro
cj_hambot_ws/src/hambot_driver/: package.xml  setup.cfg  setup.py
cj_hambot_ws/src/hambot_global_planner/: package.xml  setup.cfg  setup.py
cj_hambot_ws/src/hambot_interfaces/: CMakeLists.txt  package.xml
cj_hambot_ws/src/hambot_local_nav/: package.xml  setup.cfg  setup.py
cj_hambot_ws/src/hambot_localization/: CMakeLists.txt  package.xml
cj_ros_ws/: Dockerfile  build_docker.sh  docker-compose.yml  workflow.md
cj_ros_ws/docs/: Docker_setup.md  workflow.md
cj_ros_ws/src/hambot_driver/: package.xml  setup.cfg  setup.py
cj_ros_ws/src/hambot_driver/hambot_driver/: motor_driver.py
hambot_sim_ws/: .env  Dockerfile  build_docker.sh  docker-compose.yml  problem.md  workflow.md
hambot_sim_ws/hambot_classifier/: X_voronoi.npy  extract_features.py  train_classifier.py  y_local.npy
hambot_sim_ws/src/hambot_bringup/: CMakeLists.txt
hambot_sim_ws/src/hambot_description/: CMakeLists.txt  README.md  package.xml
(+29 files in other folders)
