<?xml version="1.0"?>
<package format="3">
  <name>hambot_driver</name>
  <version>0.1.0</version>
  <description>ROS 2 hardware drivers for HamBot (Build HAT motors, BNO055 IMU, RPLidar, Pi Camera)</description>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>